Implement enhanced shell commands with improved functionality and error handling
- Refactored CdCommand to support home directory expansion, previous directory tracking, and path normalization.
- Enhanced EchoCommand to handle escape sequences and pipeline input/output, with option for suppressing newline.
- Improved ExitCommand to manage exit status codes, resource cleanup, and custom exit handlers.
- Added HelpCommand to provide detailed help for available commands and their usage.
- Updated PwdCommand to support physical and logical path resolution with normalization.
- Enhanced TypeCommand to provide detailed information about command types, including built-in and external commands.
- Refactored ExecutableFinder to support Windows executable extensions and validate file permissions.
- Improved ExternalCommandRunner to handle command execution with output redirection and process monitoring, including timeout handling.